# yoggopoth

./: .gitignore  Makefile  pyproject.toml
yoggopoth/: __main__.py  trainer.py
