[project]
name = "yoggopoth"
description = "YogGoPoTh: learning Transformers with the Cthulhu Mythos!"
version = "0.0.1"
requires-python = ">= 3.11"
dependencies = [
    "torch ~=2.2.2",
    "fire ~=0.6.0",
    "pydantic-settings ~=2.2.1",
    "numpy ~=1.26.4",
]

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
